updated package log fixed small layout issue of dashboard

--- a/client/src/components/Courses/CourseDetail.scss
+++ b/client/src/components/Courses/CourseDetail.scss
@@ -18,11 +18,6 @@ p {
   }
 }
 
-.course-details-container {
-  background-color: $white-color;
-}
-
-
 @media (min-width: 1440px) {
   .public-course-details {
     .container {
